fix body overflow 2

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -298,7 +298,6 @@ table tr td.center-top{
 
 .panel-body{
     position: relative;
-    overflow: hidden;
 }
 
 
